--- a/app/views/cylinder.html
+++ b/app/views/cylinder.html
@@ -1,20 +1,20 @@
 <div class="card">
     <form class="form-horizontal" role="form">
         <div class="card-header">
-            <h2>Alta de Productores</h2>
+            <h2>Alta de Cilindros</h2>
         </div>
         <div class="card-body card-padding">
             <div class="form-group">
                 <label for="iusername" class="col-sm-2 control-label">Nombre</label>
                 <div class="col-sm-10">
                     <div class="fg-line">
-                        <input type="text" class="form-control input-sm" id="iusername" placeholder="Nombre de Usuario" data-ng-model="producer.producerName">
+                        <input type="text" class="form-control input-sm" id="iusername" placeholder="Nombre del cilindro" data-ng-model="cylinder.CylinderName">
                     </div>
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveProducer()">Guardar</button>
+                    <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveCylinder()">Guardar</button>
                 </div>
             </div>
             <div class="form-group">
@@ -29,7 +29,7 @@
 
 <div class="card">
     <div class="card-header">
-        <h2>Lista de Productores</h2>
+        <h2>Lista de Cilindros</h2>
     </div>
     <div class="col-sm-12 actionbar">
         <div class="form-group">
@@ -45,15 +45,15 @@
     <table id="data-table-command" class="table table-striped table-vmiddle">
         <thead>
             <tr>
-                <th data-column-id="id">Nombre</th>
+                <th data-column-id="id">Cilindro</th>
                 <th data-column-id="commands">Opciones</th>
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="producer in producers | filter:searchUser">
-                <td>{{producer.ProducerName}}</td>
+            <tr ng-repeat="cylinder in cylinders | filter:searchUser">
+                <td>{{cylinder.CylinderName}}</td>
                 <td>
-                    <button class="btn btn-icon command-delete" ng-click="deleteProducer(producer.Id)">
+                    <button class="btn btn-icon command-delete" ng-click="deleteCylinder(cylinder.Id)">
                         <span class="md md-delete"></span>
                     </button>
                 </td>
