--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,36 +1,38 @@
-<div class="card">
-  <form class="form-horizontal" role="form">
-    <div class="card-header">
-      <h2>Login</h2>
-    </div>
-    <div class="card-body card-padding">
-      <div class="form-group">
-        <label for="iusername" class="col-sm-2 control-label">Usuario</label>
-        <div class="col-sm-10">
-          <div class="fg-line">
-            <input type="text" class="form-control input-sm" id="iusername" placeholder="Nombre de Usuario" data-ng-model="loginData.username">
+<div class="animated bounceInDown">
+  <div class="card">
+    <form class="form-horizontal" role="form">
+      <div class="card-header">
+        <h2>Login</h2>
+      </div>
+      <div class="card-body card-padding">
+        <div class="form-group">
+          <label for="iusername" class="col-sm-2 control-label">Usuario</label>
+          <div class="col-sm-10">
+            <div class="fg-line">
+              <input type="text" class="form-control input-sm" id="iusername" placeholder="Nombre de Usuario" data-ng-model="loginData.username">
+            </div>
           </div>
         </div>
-      </div>
-      <div class="form-group">
-        <label for="ipassword" class="col-sm-2 control-label">Password</label>
-        <div class="col-sm-10">
+        <div class="form-group">
+          <label for="ipassword" class="col-sm-2 control-label">Password</label>
+          <div class="col-sm-10">
 
-          <div class="fg-line">
-            <input type="password" class="form-control input-sm" id="ipassword" placeholder="Password" data-ng-model="loginData.password">
+            <div class="fg-line">
+              <input type="password" class="form-control input-sm" id="ipassword" placeholder="Password" data-ng-model="loginData.password">
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-primary btn-sm" data-ng-click="login()">Entrar</button>
+          </div>
+        </div>
+        <div class="form-group">
+          <div data-ng-hide="message==''" class="alert alert-danger">
+            {{message}}
           </div>
         </div>
       </div>
-      <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-          <button type="submit" class="btn btn-primary btn-sm" data-ng-click="login()">Entrar</button>
-        </div>
-      </div>
-      <div class="form-group">
-        <div data-ng-hide="message==''" class="alert alert-danger">
-          {{message}}
-        </div>
-      </div>
-    </div>
-  </form>
+    </form>
+  </div>
 </div>
