--- a/app/views/remissionAdd.html
+++ b/app/views/remissionAdd.html
@@ -6,7 +6,7 @@
             </div>
             <div class="card-body card-padding">
                 <div class="form-group">
-                    <label for="reception" class="col-sm-2 control-label">Recepcion</label>
+                    <label for="reception" class="col-sm-2 control-label">Id Recepcion</label>
                     <div class="col-sm-10">
                         <div class="fg-line disabled">
                             <input type="text" class="form-control input-sm" id="reception" placeholder="recepcion" data-ng-model="remission.ReceptionId">
