SE agrego confirmacion en eliminar y controlador para update en recepcion, ademas de validacion en recepcion.

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -10,6 +10,13 @@ html {
 body {
   margin: 0;
 }
+.error {
+  border-color: red;
+}
+ 
+.warning {
+  border-color: yellow;
+}
 article,
 aside,
 details,
