--- a/app/views/remissionAdd.html
+++ b/app/views/remissionAdd.html
@@ -9,7 +9,7 @@
                     <label for="reception" class="col-sm-2 control-label">Id Recepcion</label>
                     <div class="col-sm-10">
                         <div class="fg-line disabled">
-                            <input type="text" class="form-control input-sm" id="reception" placeholder="recepcion" data-ng-model="remission.ReceptionId">
+                            <input required readonly type="text" class="form-control input-sm" id="reception" placeholder="recepcion" data-ng-model="remission.ReceptionId">
                         </div>
                     </div>
                 </div>
@@ -17,7 +17,7 @@
                     <label for="cultivation" class="col-sm-2 control-label">Cultivo</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="cultivation" placeholder="cultivo" data-ng-model="remission.Cultivation">
+                            <input required type="text" class="form-control input-sm" id="cultivation" placeholder="cultivo" data-ng-model="remission.Cultivation">
                         </div>
                     </div>
                 </div>
@@ -25,7 +25,7 @@
                     <label for="batch" class="col-sm-2 control-label">Huerta/Lote</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="batch" placeholder="huerta o lote" data-ng-model="remission.Batch">
+                            <input required type="text" class="form-control input-sm" id="batch" placeholder="huerta o lote" data-ng-model="remission.Batch">
                         </div>
                     </div>
                 </div>
@@ -33,7 +33,7 @@
                     <label for="quantity" class="col-sm-2 control-label">Cantidad</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="quantity" placeholder="cantidad" data-ng-model="remission.Quantity">
+                            <input required type="number" step="any" class="form-control input-sm" id="quantity" placeholder="cantidad" data-ng-model="remission.Quantity">
                         </div>
                     </div>
                 </div>
@@ -41,15 +41,15 @@
                     <label for="butler" class="col-sm-2 control-label">Mayordomo</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="butler" placeholder="mayordomo" data-ng-model="remission.Butler">
+                            <input required type="text" class="form-control input-sm" id="butler" placeholder="mayordomo" data-ng-model="remission.Butler">
                         </div>
-                    </div>
+                    </div> 
                 </div>
                 <div class="form-group">
                     <label for="transportNumber" class="col-sm-2 control-label">Transporte No.</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="transportNumber" placeholder="Nombre de Usuario" data-ng-model="remission.TransportNumber">
+                            <input required type="number" class="form-control input-sm" id="transportNumber" placeholder="Nombre de Usuario" data-ng-model="remission.TransportNumber">
                         </div>
                     </div>
                 </div>
@@ -57,7 +57,7 @@
                     <label for="driver" class="col-sm-2 control-label">Conductor</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="driver" placeholder="conductor" data-ng-model="remission.Driver">
+                            <input required type="text" class="form-control input-sm" id="driver" placeholder="conductor" data-ng-model="remission.Driver">
                         </div>
                     </div>
                 </div>
@@ -65,7 +65,7 @@
                     <label for="elaborate" class="col-sm-2 control-label">Elaboro</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="elaborate" placeholder="elaboro" data-ng-model="remission.Elaborate">
+                            <input required type="text" class="form-control input-sm" id="elaborate" placeholder="elaboro" data-ng-model="remission.Elaborate">
                         </div>
                     </div>
                 </div>
