--- a/app/views/grill/grillAdd.html
+++ b/app/views/grill/grillAdd.html
@@ -2,76 +2,78 @@
     <div class="card">
         <form class="form-horizontal" role="form">
             <div class="card-header">
-                <h2>Alta de Remisiones</h2>
+                <h2>Parrillas</h2>
             </div>
             <div class="card-body card-padding">
                 <div class="form-group">
-                    <label for="reception" class="col-sm-2 control-label">Id Recepcion</label>
+                    <label for="producers" class="col-sm-2 control-label">Productores</label>
                     <div class="col-sm-10">
-                        <div class="fg-line disabled">
-                            <input type="text" class="form-control input-sm" id="reception" placeholder="recepcion" data-ng-model="remission.ReceptionId">
+                        <div class="fg-line select">
+                            <select class="form-control" ng-model="grill.Producer">
+                            <option ng-repeat="producer in producers" ng-selected="grill.Producer == producer.ProducerName" value="{{producer.ProducerName}}">{{producer.ProducerName}}</option>
+                        </select>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="cultivation" class="col-sm-2 control-label">Cultivo</label>
+                    <label for="field" class="col-sm-2 control-label">Campo</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="cultivation" placeholder="cultivo" data-ng-model="remission.Cultivation">
+                            <input type="text" class="form-control input-sm" id="field" placeholder="campo" data-ng-model="grill.FieldName">
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="batch" class="col-sm-2 control-label">Huerta/Lote</label>
+                    <label for="variety" class="col-sm-2 control-label">Variedad</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="batch" placeholder="huerta o lote" data-ng-model="remission.Batch">
+                            <input type="text" class="form-control input-sm" id="variety" placeholder="variedad" data-ng-model="grill.Variety">
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="quantity" class="col-sm-2 control-label">Cantidad</label>
+                    <label for="quality" class="col-sm-2 control-label">Calidad</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="quantity" placeholder="cantidad" data-ng-model="remission.Quantity">
+                            <input type="text" class="form-control input-sm" id="quality" placeholder="calidad" data-ng-model="grill.Quality">
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="butler" class="col-sm-2 control-label">Mayordomo</label>
+                    <label for="sacks" class="col-sm-2 control-label">Sacos</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="butler" placeholder="mayordomo" data-ng-model="remission.Butler">
+                            <input type="text" class="form-control input-sm" id="sacks" placeholder="sacos" data-ng-model="grill.Sacks">
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="transportNumber" class="col-sm-2 control-label">Transporte No.</label>
+                    <label for="kilos" class="col-sm-2 control-label">Kilos</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="transportNumber" placeholder="Nombre de Usuario" data-ng-model="remission.TransportNumber">
+                            <input type="text" class="form-control input-sm" id="kilos" placeholder="kilos" data-ng-model="grill.Kilos">
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="driver" class="col-sm-2 control-label">Conductor</label>
+                    <label for="size" class="col-sm-2 control-label">Tamaño</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="driver" placeholder="conductor" data-ng-model="remission.Driver">
+                            <input type="text" class="form-control input-sm" id="size" placeholder="tamaño" data-ng-model="grill.Size">
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="elaborate" class="col-sm-2 control-label">Elaboro</label>
+                    <label for="date" class="col-sm-2 control-label">Fecha</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="elaborate" placeholder="elaboro" data-ng-model="remission.Elaborate">
+                            <input type="text" class="form-control input-sm" id="date" placeholder="fecha" data-ng-model="grill.DateCapture">
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveRemission()">Guardar</button>
+                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveGrill()">Guardar</button>
                     </div>
                 </div>
                 <div class="form-group">
@@ -82,8 +84,4 @@
             </div>
         </form>
     </div>
-
-    <button id="fixedbuttonLeft" type="submit" class="btn bgm-teal btn-icon" data-ng-click="redirectToReception()">
-        <i class="md md-arrow-back"></i>
-    </button>
 </div>
