--- a/app/views/grill/grillManage.html
+++ b/app/views/grill/grillManage.html
@@ -1,7 +1,7 @@
 <div class="animated bounceInRight">
     <div class="card">
         <div class="card-header">
-            <h2>Recepciones</h2>
+            <h2>Parillas</h2>
         </div>
         <div class="col-sm-12 actionbar">
             <div class="form-group">
@@ -16,35 +16,43 @@
         <table id="data-table-command" class="table table-striped table-vmiddle">
             <thead>
                 <tr>
-                    <th data-column-id="">Remision</th>
-                    <th data-column-id="">Folio</th>
-                    <th data-column-id="">Productor</th>
-                    <th data-column-id="">Campo</th>
-                    <th data-column-id="">Variedad</th>
-                    <th data-column-id="">Camion/Placas</th>
-                    <th data-column-id="">Recibido</th>
-                    <th data-column-id="">Cilindro</th>
-                    <th data-column-id="">Fecha de Captura</th>
-                    <th data-column-id="">Horas de Secado</th>
-                    <th data-column-id="">Opciones</th>
+                    <th>Id</th>
+                    <th>Fecha de Captura</th>
+                    <th>Recepciones</th>
+                    <th>Tamaño</th>
+                    <th>Sacos</th>
+                    <th>Kilos</th>
+                    <th>Calidad</th>
+                    <th>Variedad</th>
+                    <th>Productor</th>
+                    <th>Campo</th>
+                    <th>Peso de la Muestra</th>
+                    <th>Humedad</th>
+                    <th>No.Nueces</th>
+                    <th>Rendimiento</th>
+                    <th>Total</th>
+                    <th>Status</th>
+                    <th>Operaciones</th>
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="reception in receptions | filter:searchUser">
-                    <td>
-                        <button class="btn btn-icon" ng-click="redirectAddRemission(reception.Id)">
-                            <span class="md md-add"></span>
-                        </button>
-                    </td>
-                    <td>{{reception.Id}}</td>
-                    <td>{{reception.ProducerName}}</td>
-                    <td>{{reception.FieldName}}</td>
-                    <td>{{reception.Variety}}</td>
-                    <td>{{reception.CarRegistration}}</td>
-                    <td>{{reception.ReceivedFromField}}</td>
-                    <td>{{reception.Cylinder}}</td>
-                    <td>{{reception.EntryDate}}</td>
-                    <td>{{reception.HeatHoursDrying}}</td>
+                <tr ng-repeat="grill in grills | filter:searchUser">
+                    <td>{{grill.Id}}</td>
+                    <td>{{grill.DateCapture}}</td>
+                    <td>{{grill.Receptions}}</td>
+                    <td>{{grill.Size}}</td>
+                    <td>{{grill.Sacks}}</td>
+                    <td>{{grill.Kilos}}</td>
+                    <td>{{grill.Quality}}</td>
+                    <td>{{grill.Variety}}</td>
+                    <td>{{grill.Producer}}</td>
+                    <td>{{grill.FieldName}}</td>
+                    <td>{{grill.Sampling.SampleWeight}}</td>
+                    <td>{{grill.Sampling.HumidityPercent}}</td>
+                    <td>{{grill.Sampling.WalnutNumber}}</td>
+                    <td>{{grill.Sampling.Performance}}</td>
+                    <td>{{grill.Sampling.TotalWeightOfEdibleNuts}}</td>
+                    <td>{{grill.Status}}</td>
                     <td>
                         <button class="btn btn-icon command-edit">
                         <span class="md md-edit"></span>
