relacion recepcion grill agregada

--- a/app/views/grill/grillManage.html
+++ b/app/views/grill/grillManage.html
@@ -60,7 +60,7 @@
                     <button class="btn btn-icon command-delete" ng-click="deleteReception(reception.Id)">
                         <span class="md md-delete"></span>
                     </button> 
-                    <button class="btn btn-icon command" ng-click="redirectReceptionToGrill(grill.Id)">
+                    <button class="btn btn-icon command-edit" ng-click="redirectReceptionToGrill(grill.Id)">
                         <span class="md md-assignment"></span>
                     </button>
                     </td>
