--- a/app/views/reception/receptionManage.html
+++ b/app/views/reception/receptionManage.html
@@ -53,11 +53,14 @@
                         <button class="btn btn-icon command-delete" ng-click="deleteReception(reception.Id)">
                             <span class="md md-delete"></span>
                         </button>
+                        <button class="btn btn-icon command-edit" ng-click="redirectReceptionToGrill">
+                            <span class="md md-view-module"></span>
+                        </button>
                     </td>
                     <td ng-show="AddGrillToReception">
                         <div class="toggle-switch">
-                            <input id="chbx" type="checkbox" hidden="hidden" ng-model="checked" ng-change="addReceptionToGrill(reception.Id, checked)">
-                            <label for="chbx" class="ts-helper"></label>
+                            <input id="{{reception.Id}}" type="checkbox" hidden="hidden" ng-model="checked" ng-change="addReceptionToGrill(reception.Id, checked)">
+                            <label for="{{reception.Id}}" class="ts-helper"></label>
                         </div>
                     </td>
                 </tr>
