--- a/app/views/reception/receptionManage.html
+++ b/app/views/reception/receptionManage.html
@@ -18,6 +18,7 @@
             <thead>
                 <tr>
                     <th data-column-id="">Remision</th>
+                    <th data-column-id="">Id</th>
                     <th data-column-id="">Folio</th>
                     <th data-column-id="">Productor</th>
                     <th data-column-id="">Campo</th>
@@ -33,11 +34,12 @@
             <tbody>
                 <tr ng-repeat="reception in receptions | filter:searchUser">
                     <td>
-                        <button class="btn btn-icon" ng-click="redirectAddRemission(reception.Id)">
+                        <button class="btn btn-icon" ng-click="redirectAddRemission(reception)">
                             <span class="md md-add"></span>
                         </button>
                     </td>
                     <td>{{reception.Id}}</td>
+                    <td>{{reception.Folio}}</td>
                     <td>{{reception.ProducerName}}</td>
                     <td>{{reception.FieldName}}</td>
                     <td>{{reception.Variety}}</td>
