--- a/app/views/remission/remissionUpdate.html
+++ b/app/views/remission/remissionUpdate.html
@@ -1,18 +1,10 @@
 <div class="animated bounceInRight">
     <div class="card">
-        <form name="remissionForm" class="form-horizontal" role="form">
+        <form class="form-horizontal" role="form">
             <div class="card-header">
-                <h2>Alta de Remisiones</h2>
+                <h2>Actualizar Remisión</h2>
             </div>
             <div class="card-body card-padding">
-                <div class="form-group">
-                    <label for="folio" class="col-sm-2 control-label">Folio</label>
-                    <div class="col-sm-10">
-                        <div class="fg-line disabled">
-                            <input type="text" readonly class="form-control input-sm" id="folio"  data-ng-model="folio">
-                        </div>
-                    </div>
-                </div>
                 <div class="form-group">
                     <label for="cultivation" class="col-sm-2 control-label">Cultivo</label>
                     <div class="col-sm-10">
@@ -54,7 +46,7 @@
                     <label for="transportNumber" class="col-sm-2 control-label">Transporte No.</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="number" min="1" class="form-control input-sm" id="transportNumber" placeholder="Nombre de Usuario" name="TransportNumber" data-ng-model="remission.TransportNumber">
+                            <input type="number" min="1" class="form-control input-sm" id="transportNumber" placeholder="Nombre de Usuario" data-ng-model="remission.TransportNumber">
                             <small class="help-block has-error" style="color:red" ng-show="!remissionForm.$pristine && remissionForm.TransportNumber.$error.required">Número Transporte es requerido.</small>
                             <small class="help-block has-error" style="color:yellow" ng-show="!remissionForm.$pristine && remissionForm.TransportNumber.$error.number">Debe ser campo númerico.</small>
                         </div>
@@ -80,7 +72,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveRemission()" ng-disabled="!remissionForm.$valid">Guardar</button>
+                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="UpdateRemission()" ng-disabled="!remissionForm.$valid">Actualizar</button>
                     </div>
                 </div>
                 <div class="form-group">
@@ -90,6 +82,7 @@
                 </div>
             </div>
         </form>
+        
     </div>
 
     <button id="fixedbuttonLeft" type="submit" class="btn bgm-teal btn-icon" data-ng-click="redirectToReception()">
