--- a/app/views/grill/grillManage.html
+++ b/app/views/grill/grillManage.html
@@ -53,16 +53,22 @@
                     <td>{{grill.Sampling.Performance}}</td>
                     <td>{{grill.Sampling.TotalWeightOfEdibleNuts}}</td>
                     <td>{{grill.Status}}</td>
-                    <td>
-                    <button class="btn btn-icon command-edit">
-                        <span class="md md-edit"></span>
-                    </button>
-                    <button class="btn btn-icon command-delete" ng-click="deleteReception(reception.Id)">
-                        <span class="md md-delete"></span>
-                    </button> 
-                    <button class="btn btn-icon command-edit" ng-click="redirectReceptionToGrill(grill.Id)">
-                        <span class="md md-assignment"></span>
-                    </button>
+                    <td ng-hide="IsGrillToReception">
+                        <button class="btn btn-icon command-edit">
+                                <span class="md md-edit"></span>
+                            </button>
+                        <button class="btn btn-icon command-delete" ng-click="deleteReception(reception.Id)">
+                                <span class="md md-delete"></span>
+                            </button>
+                        <button class="btn btn-icon command-edit" ng-click="redirectReceptionToGrill(grill.Id)">
+                                <span class="md md-assignment"></span>
+                            </button>
+                    </td>
+                    <td ng-show="IsGrillToReception">
+                        <div class="toggle-switch">
+                            <input id="{{grill.Id}}" type="checkbox" hidden="hidden" ng-model="grill.IsAlreadyAssigned" ng-change="addGrillToReception(grill.Id, grill.IsAlreadyAssigned)">
+                            <label for="{{grill.Id}}" class="ts-helper"></label>
+                        </div>
                     </td>
                 </tr>
             </tbody>
