--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,3 +1,4 @@
 <div class="animated bounceInRight">
     <p>You are in Home!</p>
+   <a href="" class="btn btn-info" data-type="inverse"  data-from="bottom" data-align="right">Bottom Right</a>
 </div>
