--- a/app/views/reception/receptionManage.html
+++ b/app/views/reception/receptionManage.html
@@ -17,7 +17,6 @@
         <table id="data-table-command" class="table table-striped table-vmiddle">
             <thead>
                 <tr>
-                    <th data-column-id="">Remision</th>
                     <th data-column-id="">Id</th>
                     <th data-column-id="">Folio</th>
                     <th data-column-id="">Productor</th>
@@ -34,11 +33,6 @@
             </thead>
             <tbody>
                 <tr ng-repeat="reception in receptions | filter:searchUser">
-                    <td>
-                        <button class="btn btn-icon" ng-click="redirectAddRemission(reception)">
-                            <span class="md md-add"></span>
-                        </button>
-                    </td>
                     <td>{{reception.Id}}</td>
                     <td>{{reception.Folio}}</td>
                     <td>{{reception.ProducerName}}</td>
@@ -50,29 +44,25 @@
                     <td>{{reception.EntryDate}}</td>
                     <td>{{reception.HeatHoursDrying}}</td>
                     <td>{{reception.Grills}}</td>
-                    <td ng-hide="AddGrillToReception">
-                        <button class="btn btn-icon command-edit">
+                    <td ng-hide="IsGrillToReception">
+                        <button class="btn btn-icon command-edit" ng-click="redirectUpdate(reception)">
                             <span class="md md-edit"></span>
                         </button>
-                        <button class="btn btn-icon command-delete" ng-click="deleteReception(reception.Id)">
+                        <button class="btn btn-icon command-delete" ng-click="confirmationDelete(reception.Id)">
                             <span class="md md-delete"></span>
                         </button>
-                        <button class="btn btn-icon command-edit" ng-click="redirectReceptionToGrill">
+                        <button class="btn btn-icon command-edit" ng-click="redirectReceptionToGrill(reception.Id)">
                             <span class="md md-view-module"></span>
                         </button>
+                        <button class="btn btn-icon command-edit" ng-click="redirectAddRemission(reception)">
+                            <span class="md md-description"></span>
+                        </button>
                     </td>
-                    <td ng-show="AddGrillToReception">
+                    <td ng-show="IsGrillToReception">
                         <div class="toggle-switch">
                             <input id="{{reception.Id}}" type="checkbox" hidden="hidden" ng-model="reception.IsAlreadyAssigned" ng-change="addReceptionToGrill(reception.Id, reception.IsAlreadyAssigned)">
                             <label for="{{reception.Id}}" class="ts-helper"></label>
                         </div>
-                    <td>
-                        <button class="btn btn-icon command-edit" ng-click="redirectUpdate(reception)">
-                        <span class="md md-edit"></span>
-                    </button>
-                        <button class="btn btn-icon command-delete" ng-click="confirmationDelete(reception.Id)">
-                        <span class="md md-delete"></span>
-                    </button>
                     </td>
                 </tr>
             </tbody>
